# nrf52840-mdk-rs

./: .gdbinit  Cargo.toml  README.md  openocd.cfg
.bobbin/: config
.cargo/: config
examples/: blinky.rs  debug.rs
src/: lib.rs
